# smalldeflate-cli

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  default.nix  img.jpg_original  shared.hh  smalldeflate.cc  smallinflate.cc  test.sh
.github/workflows/: compile.yml
